Added bootstrap and material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
-There will be magic
+<h1>I'm with bootstrap now!!</h1>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
