basic navbar and footer

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,9 @@
-<mat-toolbar>
-  <span>My Application</span>
+<mat-toolbar class="main-bar">
+  <mat-toolbar-row>
+    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+      <mat-button-toggle value="bold">Bold</mat-button-toggle>
+      <mat-button-toggle value="italic">Italic</mat-button-toggle>
+      <mat-button-toggle value="underline">Underline</mat-button-toggle>
+    </mat-button-toggle-group>
+  </mat-toolbar-row>
 </mat-toolbar>
