--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,6 +1,6 @@
-.main-bar{
-    height: 1vh;
-    background-color: #fa8ca7;
+.main-bar {
+  height: 1vh;
+  background-color: #ef9a9a;
 }
 
-.button-toolbar{}
+.button-toolbar {}
