--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="main-bar">
   <mat-toolbar-row>
+      <img src="../common/resourses/logo-lasalsa1.png" alt=""/>    
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
       <mat-button-toggle value="bold">Bold</mat-button-toggle>
       <mat-button-toggle value="italic">Italic</mat-button-toggle>
