--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,3 @@
-<p>
-  main-page works!
-</p>
+<app-carousel></app-carousel>
+<app-groups-grid></app-groups-grid>
+<app-news-tiles></app-news-tiles>
