--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,9 @@
-<mat-toolbar class="main-bar">
-  <mat-toolbar-row>
-      <img src="../common/resourses/logo-lasalsa1.png" alt=""/>    
-    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle value="bold">Bold</mat-button-toggle>
-      <mat-button-toggle value="italic">Italic</mat-button-toggle>
-      <mat-button-toggle value="underline">Underline</mat-button-toggle>
-    </mat-button-toggle-group>
-  </mat-toolbar-row>
-</mat-toolbar>
+<mat-toolbar fxLayout="row" fxLayoutAlign="start center" class="navbar">
+    <!-- nav links-->
+    <span> Navi</span>
+    <span fxFlex></span>
+    <a mat-button>Item 1</a>
+    <a mat-button>Item 2</a>
+    <a mat-button>Item 3</a>
+    <a mat-button>Item 4</a>  
+  </mat-toolbar>
