--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,4 +1,33 @@
-.navbar {
-    max-height: 5vh;
-    background-color: #ffebee;
+mat-toolbar {
+  height: 8vh;
+  min-height: 8h;
+  background-color:#ef9a9a;
+}
+
+mat-toolbar-row {
+  height: 8vh;
+}
+
+button {
+  background-color: #ef9a9a;
+}
+
+.pepper-icon-imgage {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.flax-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.navbar-left-item {
+  text-align: start;
+  margin: 1em;
+}
+
+.navbar-right-item {
+  margin-left: auto;
 }
