--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,9 +1,13 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="start center" class="navbar">
-    <!-- nav links-->
-    <span> Navi</span>
-    <span fxFlex></span>
-    <a mat-button>Item 1</a>
-    <a mat-button>Item 2</a>
-    <a mat-button>Item 3</a>
-    <a mat-button>Item 4</a>  
-  </mat-toolbar>
+<mat-toolbar class=".navbar">
+  <mat-toolbar-row class="flax-container">
+    <div>
+      <img src="assets/logo-lasalsa1.png" class="navbar-left-item pepper-icon-imgage">
+    </div>
+    <button mat-raised-button class="navbar-left-item">La La Land</button>
+    <button mat-raised-button class="navbar-left-item">InterStellar</button>
+    <button mat-raised-button class="navbar-left-item">Sicario</button>
+    <button mat-raised-button class="navbar-left-item">Blade Runner</button>
+    <button mat-raised-button class="navbar-right-item">Primary</button>
+    <button mat-raised-button class="navbar-left-item">Primary</button>
+  </mat-toolbar-row>
+</mat-toolbar>
